# tz-fabric

./: .env.local  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  project-words.txt  setup-hooks.sh  tz-fabric.code-workspace
.githooks/: pre-commit  prepare-commit-msg
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  SECURITY.md  SUPPORT.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  ideas.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  ENHANCEMENT.yml  FEATURE_REQUEST.md  QUESTION.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  auto-assign-project.yml  change-issue-title.yml  comment-on-issue.yml  deploy.yml  issue-branch-sync.yml  issue-template-number.yml  issue-title-formatter.yml  lint-n-build-backend.yml  lint-n-build-frontend.yml  lint-n-build.yml  release-pr.yml
backend/: .env.local  .env.sample  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  cli.py  cloud.service  constants.py  lint.py  main.py  mcp-backend.service  pyproject.toml  requirements.txt  st.py
backend/agent/: graph.py  prompts.py
backend/assets/audios/: nope_20250910T183709.webm  one_20250903T034228.webm  test_20250902T164016.webm
backend/core/: config.py  db_search.py  embedder.py  indexer.py  search.py  store.py
backend/image_detection/: color_transformer.py  exif.py  helper.py  logger.py  model_manager.py  oklch.py
backend/image_search/: embedding_model.py  schema.py  vector_search.py
backend/image_search/db/: connection.py  create_table.py  delete_table.py
backend/routes/: adhaar_reader.py  analysis.py  card_reader.py  chat.py  chat_ws.py  contact.py  database.py  generate.py  mcp_proxy.py  media.py  regenerate.py  resume.py  routes_helper.py  search.py  submit.py  upload_category.py  uploads.py  validate_image.py
backend/services/: adhaar.py  gemini.py  generate_response.py  pan_extracter.py  threaded.py
backend/static/: styles.css
backend/templates/: index.html
backend/tools/: logic.py  mcp_client.py  mcpserver.py  media_tools.py  search_tool.py
backend/utils/: aws_helper.py  cache.py  db_utils.py  emoji_logger.py  env_config.py  filename.py  gemini_ap_initialize.py  gemini_client.py  groq_ap_initialize.py  groq_client.py  image_utils.py  logger.py  messages.py  paths.py  profanity.py  prompt_config.py  prompt_generator.py  validate_image_base64.py
backend/vector_store/: chroma.sqlite3
docs/: lancedb_gui.md  tool.md
fabric-front/: package-lock.json  package.json
frontend/: .env  .env.sample  .eslintrc.json  .gitignore  .prettierrc.json  CHANGELOG.md  Dockerfile  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-fabric/public/: index.html
frontend-fabric/src/: index.css
frontend-fabric/src/components/: Header.jsx  descriptionBox.jsx  drawerToggle.jsx
frontend-fabric/src/hooks/: useImageAnalysis.js
frontend-fabric/src/pages/: Home.jsx
frontend-fabric/src/services/: analyze_Api.js
frontend-fabric/src/styles/: DescriptionBox.css  ImagePreviewPanel.css
frontend/src/: App.css  App.tsx  Routing.tsx  constants.ts  index.css  main.tsx
frontend/src/assets/styles/: ComingSoon.css  ContentGrid.css  DrawerToggle.css  FabricSearch.css  Footer.css  Home.css  ImageDescription.css  ImageDescriptorHeader.css  Loader.css  SearchBar.css  contact.css  navbar.css
frontend/src/components/: Composer.tsx  DescriptionBox.tsx  DrawerToggle.tsx  EmptyState.tsx  FabricSearchHeader.tsx  Footer.tsx  HandleRedirectAction.tsx  Header.tsx  ImageDescriptorHeader.tsx  ImagePreviewPanel.tsx  Loader.tsx  MessageBubble.tsx  MessageList.tsx  NavBar.tsx  NotFound.tsx  Notification.tsx  SampleImageGalleryCard.jsx  SampleImageGalleryCard.tsx  SearchBar.jsx  SearchBar.tsx  SuggestionChips.tsx  TypingIndicator.tsx  composer.tsx  descriptionBox.jsx  descriptionBox.tsx  drawerToggle.tsx  emptyState.tsx  handleRedirectAction.tsx  imagePreviewPanel.jsx  imagePreviewPanel.tsx  messageBubble.tsx  messageList.tsx  typingIndicator.tsx
frontend/src/hooks/: chat.ts  feature.ts  search.ts  useImageAnalysis.js  useImageAnalysis.ts  useImageSearch.ts  usePageTracking.ts  useUploadAndRecord.ts
frontend/src/pages/: AadhaarCardReader.tsx  AudioForm.tsx  CardReader.tsx  Chat.tsx  ComingSoon.tsx  Contact.tsx  FabricChat.tsx  FabricList.tsx  FabricSearch.tsx  Home.tsx  ImageDescriptor.tsx  PanCardReader.tsx  Reader.tsx  adhaar.tsx  audiofeature.tsx  contentGrid.tsx  fabricgen.tsx  generate.tsx  search.tsx
frontend/src/services/: analyze_Api.ts  analyze_api.ts  chat_api.ts  contentApi.ts  content_api.ts  media_api.ts  search_api.ts
frontend/src/styles/: Chat.css  Composer.css  ContentGrid.css  DescriptionBox.css  EmptyState.css  FabricChat.css  FabricSearch.css  Footer.css  Home.css  ImageDescription.css  ImageDescriptorHeader.css  ImagePreviewPanel.css  Loader.css  Messages.css  Notification.css  SampleImageGalleryCard.css  Search.css  SearchBar.css  SuggestionChips.css  UploadPage.css  navbar.css
frontend/src/utils/: cleanText.ts  extractFilenameFromText.ts  fabric-name.ts  formatFilename.ts  image-helper.ts  imageUtils.ts  normalizeMarkdown.ts  throttle.ts  typingEffect.ts
