[project]
name = "tz-fabric"
version = "1.3.1"
description = "This is fabric analyzer backend"
authors = [{ name = "recursivezero", email = "recursivezero@outlook.com" }]
readme = "README.md"
license = { file = "LICENSE-PYTHON" }
keywords = ["fabric", "analyzer", "fastapi", "gpt", "genai"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: FastAPI",
]
requires-python = ">=3.11,<3.13"

# Core, lightweight runtime deps only
dependencies = [
  "fastapi>=0.116.1,<0.117.0",
  "dotenv>=0.9.9,<0.10.0",
  "pymongo>=4.13.2,<5.0.0",
  "numpy (>=2,<2.3.0)",
  "chromadb>=1.0.17,<2.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "mcp>=1.13.1,<2.0.0",
  "fastmcp>=2.12.5,<3.0.0",
  "click>=8.3.1,<9.0.0",
  "opencv-python (>=4.12.0.88,<5.0.0.0)",
  "easyocr (>=1.7.2,<2.0.0)",
  "pillow (>=12.0.0,<13.0.0)",
  "uvicorn (>=0.40.0,<0.41.0)",
  "requests (>=2.32.5,<3.0.0)",
  "groq (<1)",
  "langchain-core (>=1.2.7,<2.0.0)",
  "langchain-groq (>=1.1.1,<2.0.0)",
]


[project.optional-dependencies]
# "Heavy" bundle: vector DB, image, Mongo, NumPy + all other extras.
# Install with: pip install "tz-fabric[extra]"
extra = [
  "pymongo>=4.13.2,<5.0.0",
  "chromadb>=1.0.17,<2.0.0",
]


[project.urls]
homepage = "https://theadzip.com"
repository = "https://github.com/recursivezero/tz-fabric"
documentation = "https://github.com/recursivezero/tz-script/docs"

[project.scripts]
tzfabric = "cli:main"
lint = "lint:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "*"
from = "."


#[tool.poetry.requires-plugins]
#poetry-plugin-export = "^1.9"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0,<25.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
pip-audit = "^2.9.0"
pipreqs = "0.5.0"
ruff = "^0.13.1"
isort = "^7.0.0"
autoflake = "^2.3.1"
deptry = "^0.24.0"

[tool.flake8]
max_line_length = 190
